--- a/frontend/src/App.css
+++ b/frontend/src/App.css
@@ -1,3 +1,38 @@
+body {
+  background: linear-gradient(135deg, #71b7e6, #9b59b6);
+  /* background: #0bb2d4; */
+}
+
+#root {
+  height: 100vh;
+  
+}
+
+.product-list-heading {
+  text-align: center;
+  color: #fff;
+  font-size: 35px;
+  font-weight: bold;
+  padding-top: 2rem;
+  padding-bottom: 2rem;
+}
+
+
+.search-box {
+  width: 100%;
+  padding: 10px 25px;
+  border: 1px solid grey;
+  border-radius: 50px;
+  outline: 0;
+  
+}
+.table {
+  text-align: center;
+  background: cornsilk;
+  margin-top: 2.5rem;
+  
+}
+
 .list {
   text-align: left;
   max-width: 750px;
@@ -12,4 +47,14 @@
 .edit-form {
   max-width: 300px;
   margin: auto;
+}
+
+
+footer {
+  height: 20vh;
+  background: #000;
+  color: #fff;
+  text-align: center;
+  padding-top: 3.5rem;
+  margin-bottom: 0;
 }
